[project]
name = "desmos_in_manim"
version = "0.1.0"
description = "Add Desmos graphs to Manim animations."
readme = "README.md"
authors = [{ name = "UJ" }]
requires-python = ">=3.14"
dependencies = [
    "manim>=0.19.0",
    "requests>=2.31.0",
    "websocket-client>=1.6.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "playwright>=1.55",
    "asyncio>=3.4.3",
    "nest-asyncio>=1.6.0",
    "desmos-in-manim",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
