[project]
name = "desmos_in_manim"
version = "0.1.0"
description = "Add Desmos graphs to Manim animations."
readme = "README.md"
authors = [{ name = "UJ" }]
requires-python = ">=3.10"
dependencies = [
    "manim>=0.19.0",
    "requests>=2.31.0",
    "websocket-client>=1.6.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "playwright>=1.55",
    "nest-asyncio>=1.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
